syntax = "proto3";

package pb;



//The Notification service definition.
service Notification {
 rpc SendEmail                  (SendEmailRequest                 ) returns (SendEmailReply                 );
 rpc SendWelcomeToLensEmail     (SendWelcomeToLensEmailRequest    ) returns (SendWelcomeToLensEmailReply    );
 rpc SendPasswordChangeEmail    (SendPasswordChangeEmailRequest   ) returns (SendPasswordChangeEmailReply   );
 rpc SendEmailAccountResetEmail (SendEmailAccountResetEmailRequest) returns (SendEmailAccountResetEmailReply);
}

message SendEmailRequest {
    string email = 1;
    string content = 2;
}

message SendEmailReply {
    string id = 1;
}

message SendWelcomeToLensEmailRequest {
    string email = 1;
}

message SendWelcomeToLensEmailReply {
    string id = 1;
}

message SendPasswordChangeEmailRequest {
    string email = 1;
}

message SendPasswordChangeEmailReply {
    string id = 1;
}

message SendEmailAccountResetEmailRequest {
    string oldEmail = 1;
    string newEmail = 2;
}

message SendEmailAccountResetEmailReply {
    string id = 1;
}

